[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Clock.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Level 6.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 129.836, 36.299 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 127.862, 42.8453 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 192.538, 45.7692 )

[node name="Level 6" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -1048591, 5, 0, -1048590, 5, 0, -1048589, 5, 0, -1048588, 5, 0, -1048587, 5, 0, -1048586, 5, 0, -1048585, 5, 0, -1048584, 5, 0, -1048583, 5, 0, -1048582, 5, 0, -1048581, 5, 0, -1048580, 5, 0, -1048579, 5, 0, -1048578, 5, 0, -1048577, 5, 0, -1114112, 5, 0, -1114111, 5, 0, -1114110, 5, 0, -1114109, 5, 0, -1114108, 5, 0, -1114107, 5, 0, -1114106, 5, 0, -1114105, 5, 0, -1114104, 5, 0, -1114103, 5, 0, -1114102, 5, 0, -1114101, 5, 0, -1114100, 5, 0, -1114099, 5, 0, -1114098, 5, 0, -1114097, 5, 0, -1114096, 5, 0, -1114095, 5, 0, -1114094, 5, 0, -1114093, 5, 0, -1114092, 5, 0, -1114091, 5, 0, -1114090, 5, 0, -1114089, 5, 0, -1114088, 5, 0, -983055, 5, 0, -983054, 5, 0, -983053, 5, 0, -983052, 5, 0, -983051, 5, 0, -983050, 5, 0, -983049, 5, 0, -983048, 5, 0, -983047, 5, 0, -983046, 5, 0, -983045, 5, 0, -983044, 5, 0, -983043, 5, 0, -983042, 5, 0, -983041, 5, 0, -1048576, 5, 0, -1048575, 5, 0, -1048574, 5, 0, -1048573, 5, 0, -1048572, 5, 0, -1048571, 5, 0, -1048570, 5, 0, -1048569, 5, 0, -1048568, 5, 0, -1048567, 5, 0, -1048566, 5, 0, -1048565, 5, 0, -1048564, 5, 0, -1048563, 5, 0, -1048562, 5, 0, -1048561, 5, 0, -1048560, 5, 0, -1048559, 5, 0, -1048558, 5, 0, -1048557, 5, 0, -1048556, 5, 0, -1048555, 5, 0, -1048554, 5, 0, -1048553, 5, 0, -1048552, 5, 0, -917519, 5, 0, -917518, 5, 0, -917517, 5, 0, -917516, 5, 0, -917515, 5, 0, -917514, 5, 0, -917513, 5, 0, -917512, 5, 0, -917511, 5, 0, -917510, 5, 0, -917509, 5, 0, -917508, 5, 0, -917507, 5, 0, -917506, 5, 0, -917505, 5, 0, -983040, 5, 0, -983039, 5, 0, -983038, 5, 0, -983037, 5, 0, -983036, 5, 0, -983035, 5, 0, -983034, 5, 0, -983033, 5, 0, -983032, 5, 0, -983031, 5, 0, -983030, 5, 0, -983029, 5, 0, -983028, 5, 0, -983027, 5, 0, -983026, 5, 0, -983025, 5, 0, -983024, 5, 0, -983023, 5, 0, -983022, 5, 0, -983021, 5, 0, -983020, 5, 0, -983019, 5, 0, -983018, 5, 0, -983017, 5, 0, -983016, 5, 0, -851983, 5, 0, -851982, 5, 0, -851981, 5, 0, -851980, 5, 0, -851979, 5, 0, -851978, 5, 0, -851977, 5, 0, -851976, 5, 0, -851975, 5, 0, -851974, 5, 0, -851973, 5, 0, -851972, 5, 0, -851971, 5, 0, -851970, 5, 0, -851969, 5, 0, -917504, 5, 0, -917503, 5, 0, -917502, 5, 0, -917501, 5, 0, -917500, 5, 0, -917499, 5, 0, -917498, 5, 0, -917497, 5, 0, -917496, 5, 0, -917495, 5, 0, -917494, 5, 0, -917493, 5, 0, -917492, 5, 0, -917491, 5, 0, -917490, 5, 0, -917489, 5, 0, -917488, 5, 0, -917487, 5, 0, -917486, 5, 0, -917485, 5, 0, -917484, 5, 0, -917483, 5, 0, -917482, 5, 0, -917481, 5, 0, -917480, 5, 0, -786447, 5, 0, -786446, 5, 0, -786445, 5, 0, -786444, 5, 0, -786443, 5, 0, -786442, 5, 0, -786441, 5, 0, -786440, 5, 0, -786439, 5, 0, -786438, 5, 0, -786437, 5, 0, -786436, 5, 0, -786435, 5, 0, -786434, 5, 0, -786433, 5, 0, -851968, 5, 0, -851967, 5, 0, -851966, 5, 0, -851965, 5, 0, -851964, 5, 0, -851963, 5, 0, -851962, 5, 0, -851961, 5, 0, -851960, 5, 0, -851959, 5, 0, -851958, 5, 0, -851957, 5, 0, -851956, 5, 0, -851955, 5, 0, -851954, 5, 0, -851953, 5, 0, -851952, 5, 0, -851951, 5, 0, -851950, 5, 0, -851949, 5, 0, -851948, 5, 0, -851947, 5, 0, -851946, 5, 0, -851945, 5, 0, -851944, 5, 0, -720911, 5, 0, -720910, 5, 0, -720909, 5, 0, -720908, 5, 0, -720907, 5, 0, -720906, 5, 0, -720905, 5, 0, -720904, 5, 0, -720903, 5, 0, -720902, 5, 0, -720901, 5, 0, -720900, 5, 0, -720899, 5, 0, -720898, 5, 0, -720897, 5, 0, -786432, 5, 0, -786431, 5, 0, -786430, 5, 0, -786429, 5, 0, -786428, 5, 0, -786427, 5, 0, -786426, 5, 0, -786425, 5, 0, -786424, 5, 0, -786423, 5, 0, -786422, 5, 0, -786421, 5, 0, -786420, 5, 0, -786419, 5, 0, -786418, 5, 0, -786417, 5, 0, -786416, 5, 0, -786415, 5, 0, -786414, 5, 0, -786413, 5, 0, -786412, 5, 0, -786411, 5, 0, -786410, 5, 0, -786409, 5, 0, -786408, 5, 0, -655375, 5, 0, -655374, 5, 0, -655373, 5, 0, -655372, 5, 0, -655371, 5, 0, -655370, 5, 0, -655369, 8, 0, -655368, 8, 0, -655367, 8, 0, -655366, 8, 0, -655365, 8, 0, -655364, 5, 0, -655363, 5, 0, -655362, 5, 0, -655361, 5, 0, -720896, 5, 0, -720895, 5, 0, -720894, 5, 0, -720893, 5, 0, -720892, 5, 0, -720891, 5, 0, -720890, 5, 0, -720889, 5, 0, -720888, 5, 0, -720887, 5, 0, -720886, 5, 0, -720885, 5, 0, -720884, 5, 0, -720883, 5, 0, -720882, 5, 0, -720881, 5, 0, -720880, 5, 0, -720879, 5, 0, -720878, 5, 0, -720877, 5, 0, -720876, 5, 0, -720875, 5, 0, -720874, 5, 0, -720873, 5, 0, -720872, 5, 0, -589839, 5, 0, -589838, 5, 0, -589837, 5, 0, -589836, 5, 0, -589835, 5, 0, -589834, 6, 0, -589828, 19, 0, -589827, 5, 0, -589826, 5, 0, -589825, 5, 0, -655360, 5, 0, -655359, 5, 0, -655358, 5, 0, -655357, 5, 0, -655356, 5, 0, -655355, 5, 0, -655354, 5, 0, -655353, 5, 0, -655352, 5, 0, -655351, 5, 0, -655350, 5, 0, -655349, 5, 0, -655348, 5, 0, -655347, 5, 0, -655346, 5, 0, -655345, 5, 0, -655344, 5, 0, -655343, 5, 0, -655342, 5, 0, -655341, 5, 0, -655340, 5, 0, -655339, 5, 0, -655338, 5, 0, -655337, 5, 0, -655336, 5, 0, -524303, 5, 0, -524302, 5, 0, -524301, 5, 0, -524300, 5, 0, -524299, 5, 0, -524298, 6, 0, -524291, 19, 0, -524290, 5, 0, -524289, 5, 0, -589824, 5, 0, -589823, 5, 0, -589822, 5, 0, -589821, 5, 0, -589820, 5, 0, -589819, 5, 0, -589818, 5, 0, -589817, 5, 0, -589816, 5, 0, -589815, 5, 0, -589814, 5, 0, -589813, 5, 0, -589812, 5, 0, -589811, 5, 0, -589810, 5, 0, -589809, 5, 0, -589808, 5, 0, -589807, 5, 0, -589806, 5, 0, -589805, 5, 0, -589804, 5, 0, -589803, 5, 0, -589802, 5, 0, -589801, 5, 0, -589800, 5, 0, -458767, 5, 0, -458766, 5, 0, -458765, 5, 0, -458764, 5, 0, -458763, 5, 0, -458762, 5, 0, -458761, 2, 0, -458760, 2, 0, -458759, 16, 0, -458754, 19, 0, -458753, 5, 0, -524288, 5, 0, -524287, 5, 0, -524286, 5, 0, -524285, 5, 0, -524284, 5, 0, -524283, 5, 0, -524282, 5, 0, -524281, 5, 0, -524280, 5, 0, -524279, 5, 0, -524278, 5, 0, -524277, 5, 0, -524276, 5, 0, -524275, 5, 0, -524274, 5, 0, -524273, 5, 0, -524272, 5, 0, -524271, 5, 0, -524270, 5, 0, -524269, 5, 0, -524268, 5, 0, -524267, 5, 0, -524266, 5, 0, -524265, 5, 0, -524264, 5, 0, -393231, 5, 0, -393230, 5, 0, -393229, 5, 0, -393228, 5, 0, -393227, 5, 0, -393226, 5, 0, -393225, 5, 0, -393224, 20, 0, -393217, 19, 0, -458752, 8, 0, -458751, 8, 0, -458750, 8, 0, -458749, 8, 0, -458748, 8, 0, -458747, 8, 0, -458746, 8, 0, -458745, 8, 0, -458744, 8, 0, -458743, 8, 0, -458742, 8, 0, -458741, 5, 0, -458740, 5, 0, -458739, 5, 0, -458738, 5, 0, -458737, 5, 0, -458736, 5, 0, -458735, 5, 0, -458734, 5, 0, -458733, 5, 0, -458732, 5, 0, -458731, 5, 0, -458730, 5, 0, -458729, 5, 0, -458728, 5, 0, -327695, 5, 0, -327694, 5, 0, -327693, 5, 0, -327692, 5, 0, -327691, 5, 0, -327690, 5, 0, -327689, 20, 0, -327686, 13, 0, -393205, 19, 0, -393204, 5, 0, -393203, 5, 0, -393202, 5, 0, -393201, 5, 0, -393200, 5, 0, -393199, 5, 0, -393198, 5, 0, -393197, 5, 0, -393196, 5, 0, -393195, 5, 0, -393194, 5, 0, -393193, 5, 0, -393192, 5, 0, -262159, 5, 0, -262158, 5, 0, -262157, 5, 0, -262156, 5, 0, -262155, 5, 0, -262154, 6, 0, -327668, 19, 0, -327667, 5, 0, -327666, 5, 0, -327665, 5, 0, -327664, 5, 0, -327663, 5, 0, -327662, 5, 0, -327661, 5, 0, -327660, 5, 0, -327659, 5, 0, -327658, 5, 0, -327657, 5, 0, -327656, 5, 0, -196623, 5, 0, -196622, 5, 0, -196621, 5, 0, -196620, 5, 0, -196619, 5, 0, -196618, 6, 0, -196610, 13, 0, -262131, 19, 0, -262130, 5, 0, -262129, 5, 0, -262128, 5, 0, -262127, 5, 0, -262126, 5, 0, -262125, 5, 0, -262124, 5, 0, -262123, 5, 0, -262122, 5, 0, -262121, 5, 0, -262120, 5, 0, -131087, 5, 0, -131086, 5, 0, -131085, 5, 0, -131084, 5, 0, -131083, 5, 0, -131082, 5, 0, -131081, 16, 0, -196602, 10, 0, -196597, 10, 0, -196594, 19, 0, -196593, 5, 0, -196592, 5, 0, -196591, 5, 0, -196590, 5, 0, -196589, 5, 0, -196588, 5, 0, -196587, 5, 0, -196586, 5, 0, -196585, 5, 0, -196584, 5, 0, -65551, 5, 0, -65550, 5, 0, -65549, 5, 0, -65548, 5, 0, -65547, 5, 0, -65546, 6, 0, -131066, 11, 0, -131062, 14, 0, -131061, 5, 0, -131060, 16, 0, -131057, 19, 0, -131056, 5, 0, -131055, 5, 0, -131054, 5, 0, -131053, 5, 0, -131052, 5, 0, -131051, 5, 0, -131050, 5, 0, -131049, 5, 0, -131048, 5, 0, -15, 5, 0, -14, 5, 0, -13, 5, 0, -12, 5, 0, -11, 5, 0, -10, 6, 0, -65530, 11, 0, -65525, 12, 0, -65520, 4, 0, -65519, 5, 0, -65518, 5, 0, -65517, 5, 0, -65516, 5, 0, -65515, 5, 0, -65514, 5, 0, -65513, 5, 0, -65512, 5, 0, 65521, 5, 0, 65522, 5, 0, 65523, 5, 0, 65524, 5, 0, 65525, 5, 0, 65526, 5, 0, 65527, 2, 0, 65528, 2, 0, 65529, 2, 0, 65530, 3, 0, 1, 1, 0, 6, 11, 0, 16, 4, 0, 17, 5, 0, 18, 5, 0, 19, 5, 0, 20, 5, 0, 21, 5, 0, 22, 5, 0, 23, 5, 0, 24, 5, 0, 131057, 5, 0, 131058, 5, 0, 131059, 5, 0, 131060, 5, 0, 131061, 5, 0, 131062, 5, 0, 131063, 5, 0, 131064, 5, 0, 131065, 5, 0, 131066, 6, 0, 65542, 4, 0, 65543, 16, 0, 65552, 4, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 65557, 5, 0, 65558, 5, 0, 65559, 5, 0, 65560, 5, 0, 196593, 5, 0, 196594, 5, 0, 196595, 5, 0, 196596, 5, 0, 196597, 5, 0, 196598, 5, 0, 196599, 5, 0, 196600, 5, 0, 196601, 5, 0, 196602, 6, 0, 131078, 11, 0, 131088, 4, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 131092, 5, 0, 131093, 5, 0, 131094, 5, 0, 131095, 5, 0, 131096, 5, 0, 262129, 5, 0, 262130, 5, 0, 262131, 5, 0, 262132, 5, 0, 262133, 5, 0, 262134, 5, 0, 262135, 5, 0, 262136, 5, 0, 262137, 5, 0, 262138, 6, 0, 196609, 10, 0, 196614, 11, 0, 196624, 4, 0, 196625, 5, 0, 196626, 5, 0, 196627, 5, 0, 196628, 5, 0, 196629, 5, 0, 196630, 5, 0, 196631, 5, 0, 196632, 5, 0, 327665, 5, 0, 327666, 5, 0, 327667, 5, 0, 327668, 5, 0, 327669, 5, 0, 327670, 5, 0, 327671, 5, 0, 327672, 5, 0, 327673, 5, 0, 327674, 6, 0, 262145, 11, 0, 262150, 4, 0, 262151, 16, 0, 262160, 4, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 262164, 5, 0, 262165, 5, 0, 262166, 5, 0, 262167, 5, 0, 262168, 5, 0, 393201, 5, 0, 393202, 5, 0, 393203, 5, 0, 393204, 5, 0, 393205, 5, 0, 393206, 5, 0, 393207, 5, 0, 393208, 5, 0, 393209, 5, 0, 393210, 6, 0, 327681, 11, 0, 327686, 11, 0, 327696, 4, 0, 327697, 5, 0, 327698, 5, 0, 327699, 5, 0, 327700, 5, 0, 327701, 5, 0, 327702, 5, 0, 327703, 5, 0, 327704, 5, 0, 458737, 5, 0, 458738, 5, 0, 458739, 5, 0, 458740, 5, 0, 458741, 5, 0, 458742, 5, 0, 458743, 5, 0, 458744, 5, 0, 458745, 5, 0, 458746, 6, 0, 458747, 17, 0, 458748, 18, 0, 458749, 17, 0, 458750, 18, 0, 458751, 17, 0, 393216, 18, 0, 393217, 11, 0, 393222, 11, 0, 393232, 4, 0, 393233, 5, 0, 393234, 5, 0, 393235, 5, 0, 393236, 5, 0, 393237, 5, 0, 393238, 5, 0, 393239, 5, 0, 393240, 5, 0, 524273, 5, 0, 524274, 5, 0, 524275, 5, 0, 524276, 5, 0, 524277, 5, 0, 524278, 5, 0, 524279, 5, 0, 524280, 5, 0, 524281, 5, 0, 524282, 5, 0, 524283, 5, 0, 524284, 5, 0, 524285, 5, 0, 524286, 5, 0, 524287, 5, 0, 458752, 5, 0, 458753, 11, 0, 458754, 17, 0, 458755, 18, 0, 458756, 17, 0, 458757, 18, 0, 458758, 4, 0, 458759, 16, 0, 458768, 4, 0, 458769, 5, 0, 458770, 5, 0, 458771, 5, 0, 458772, 5, 0, 458773, 5, 0, 458774, 5, 0, 458775, 5, 0, 458776, 5, 0, 589809, 5, 0, 589810, 5, 0, 589811, 5, 0, 589812, 5, 0, 589813, 5, 0, 589814, 5, 0, 589815, 5, 0, 589816, 5, 0, 589817, 5, 0, 589818, 5, 0, 589819, 5, 0, 589820, 5, 0, 589821, 5, 0, 589822, 5, 0, 589823, 5, 0, 524288, 5, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 6, 0, 524304, 4, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524308, 5, 0, 524309, 5, 0, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 655345, 5, 0, 655346, 5, 0, 655347, 5, 0, 655348, 5, 0, 655349, 5, 0, 655350, 5, 0, 655351, 5, 0, 655352, 5, 0, 655353, 5, 0, 655354, 5, 0, 655355, 5, 0, 655356, 5, 0, 655357, 5, 0, 655358, 5, 0, 655359, 5, 0, 589824, 5, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 5, 0, 589830, 6, 0, 589835, 0, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 589843, 5, 0, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0, 589847, 5, 0, 589848, 5, 0, 720881, 5, 0, 720882, 5, 0, 720883, 5, 0, 720884, 5, 0, 720885, 5, 0, 720886, 5, 0, 720887, 5, 0, 720888, 5, 0, 720889, 5, 0, 720890, 5, 0, 720891, 5, 0, 720892, 5, 0, 720893, 5, 0, 720894, 5, 0, 720895, 5, 0, 655360, 5, 0, 655361, 5, 0, 655362, 5, 0, 655363, 5, 0, 655364, 5, 0, 655365, 5, 0, 655366, 6, 0, 655367, 17, 0, 655368, 18, 0, 655369, 17, 0, 655370, 18, 0, 655371, 4, 0, 655372, 5, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 786417, 5, 0, 786418, 5, 0, 786419, 5, 0, 786420, 5, 0, 786421, 5, 0, 786422, 5, 0, 786423, 5, 0, 786424, 5, 0, 786425, 5, 0, 786426, 5, 0, 786427, 5, 0, 786428, 5, 0, 786429, 5, 0, 786430, 5, 0, 786431, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 851953, 5, 0, 851954, 5, 0, 851955, 5, 0, 851956, 5, 0, 851957, 5, 0, 851958, 5, 0, 851959, 5, 0, 851960, 5, 0, 851961, 5, 0, 851962, 5, 0, 851963, 5, 0, 851964, 5, 0, 851965, 5, 0, 851966, 5, 0, 851967, 5, 0, 786432, 5, 0, 786433, 5, 0, 786434, 5, 0, 786435, 5, 0, 786436, 5, 0, 786437, 5, 0, 786438, 5, 0, 786439, 5, 0, 786440, 5, 0, 786441, 5, 0, 786442, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 786454, 5, 0, 786455, 5, 0, 786456, 5, 0, 917489, 5, 0, 917490, 5, 0, 917491, 5, 0, 917492, 5, 0, 917493, 5, 0, 917494, 5, 0, 917495, 5, 0, 917496, 5, 0, 917497, 5, 0, 917498, 5, 0, 917499, 5, 0, 917500, 5, 0, 917501, 5, 0, 917502, 5, 0, 917503, 5, 0, 851968, 5, 0, 851969, 5, 0, 851970, 5, 0, 851971, 5, 0, 851972, 5, 0, 851973, 5, 0, 851974, 5, 0, 851975, 5, 0, 851976, 5, 0, 851977, 5, 0, 851978, 5, 0, 851979, 5, 0, 851980, 5, 0, 851981, 5, 0, 851982, 5, 0, 851983, 5, 0, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 851990, 5, 0, 851991, 5, 0, 851992, 5, 0, 983025, 5, 0, 983026, 5, 0, 983027, 5, 0, 983028, 5, 0, 983029, 5, 0, 983030, 5, 0, 983031, 5, 0, 983032, 5, 0, 983033, 5, 0, 983034, 5, 0, 983035, 5, 0, 983036, 5, 0, 983037, 5, 0, 983038, 5, 0, 983039, 5, 0, 917504, 5, 0, 917505, 5, 0, 917506, 5, 0, 917507, 5, 0, 917508, 5, 0, 917509, 5, 0, 917510, 5, 0, 917511, 5, 0, 917512, 5, 0, 917513, 5, 0, 917514, 5, 0, 917515, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 5, 0, 917528, 5, 0, 1048561, 5, 0, 1048562, 5, 0, 1048563, 5, 0, 1048564, 5, 0, 1048565, 5, 0, 1048566, 5, 0, 1048567, 5, 0, 1048568, 5, 0, 1048569, 5, 0, 1048570, 5, 0, 1048571, 5, 0, 1048572, 5, 0, 1048573, 5, 0, 1048574, 5, 0, 1048575, 5, 0, 983040, 5, 0, 983041, 5, 0, 983042, 5, 0, 983043, 5, 0, 983044, 5, 0, 983045, 5, 0, 983046, 5, 0, 983047, 5, 0, 983048, 5, 0, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 5, 0, 1114097, 5, 0, 1114098, 5, 0, 1114099, 5, 0, 1114100, 5, 0, 1114101, 5, 0, 1114102, 5, 0, 1114103, 5, 0, 1114104, 5, 0, 1114105, 5, 0, 1114106, 5, 0, 1114107, 5, 0, 1114108, 5, 0, 1114109, 5, 0, 1114110, 5, 0, 1114111, 5, 0, 1048576, 5, 0, 1048577, 5, 0, 1048578, 5, 0, 1048579, 5, 0, 1048580, 5, 0, 1048581, 5, 0, 1048582, 5, 0, 1048583, 5, 0, 1048584, 5, 0, 1048585, 5, 0, 1048586, 5, 0, 1048587, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048596, 5, 0, 1048597, 5, 0, 1048598, 5, 0, 1048599, 5, 0, 1048600, 5, 0, 1179633, 5, 0, 1179634, 5, 0, 1179635, 5, 0, 1179636, 5, 0, 1179637, 5, 0, 1179638, 5, 0, 1179639, 5, 0, 1179640, 5, 0, 1179641, 5, 0, 1179642, 5, 0, 1179643, 5, 0, 1179644, 5, 0, 1179645, 5, 0, 1179646, 5, 0, 1179647, 5, 0, 1114112, 5, 0, 1114113, 5, 0, 1114114, 5, 0, 1114115, 5, 0, 1114116, 5, 0, 1114117, 5, 0, 1114118, 5, 0, 1114119, 5, 0, 1114120, 5, 0, 1114121, 5, 0, 1114122, 5, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114132, 5, 0, 1114133, 5, 0, 1114134, 5, 0, 1114135, 5, 0, 1114136, 5, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 989.012, 538.753 )

[node name="Exit" parent="." instance=ExtResource( 3 )]
position = Vector2( -538.79, -544.438 )

[node name="Clock" parent="." instance=ExtResource( 4 )]
position = Vector2( -94.4041, -285.67 )

[node name="Death Box" type="Area2D" parent="."]
position = Vector2( 562.989, 570.753 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death Box"]
position = Vector2( 15.9201, 79.6006 )
shape = SubResource( 1 )

[node name="Death Box 2" type="Area2D" parent="."]
position = Vector2( 259.484, 413.603 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death Box 2"]
position = Vector2( 0, 55.2523 )
shape = SubResource( 2 )

[node name="Death Box 3" type="Area2D" parent="."]
position = Vector2( -126.404, 315.387 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death Box 3"]
position = Vector2( 0, 73.0453 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Death Box" to="." method="_on_Death_Box_body_entered"]
[connection signal="body_entered" from="Death Box 2" to="." method="_on_Death_Box_2_body_entered"]
[connection signal="body_entered" from="Death Box 3" to="." method="_on_Death_Box_3_body_entered"]
